// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot 1`] = `
<div
  data-testid="todo-1"
>
  <strike>
    <h2>
      feed dog
    </h2>
  </strike>
</div>
`;

exports[`should render todo component completed true: <strike> 1`] = `
<div
  data-testid="todo-1"
>
  <strike>
    <h2>
      throw rubbish
    </h2>
  </strike>
</div>
`;
